# ntarobot_sam

ntarobot_sam2/: package.xml  setup.cfg  setup.py
ntarobot_sam2/ntarobot_sam2/: sam2.py  sam2_client.py  sam2_server.py  utils.py
ntarobot_sam2/scripts/: sam2_client_node.py  sam2_server_node.py
ntarobot_sam_msg/: CMakeLists.txt  package.xml
ntarobot_sam_msg/srv/: SegmentAuto.srv  Segmentacion.srv
